fix(misc): fix button spacing; fix local dev build speed issue

--- a/site/src/app/app.component.scss
+++ b/site/src/app/app.component.scss
@@ -2,6 +2,5 @@ app-nav-banner {
   position: fixed;
   top: 10px;
   left: 12px;
-  right: 5px;
-  width: auto;
+  right: 12px;
 }
